# brainiac

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
data/: sample_train_config.json
examples/: bench_all.rs  benchmark.rs  extract_features.rs  train_brainage.rs
scripts/: convert_and_publish.py  export_safetensors.py  generate_parity_vectors.py
src/: augmentation.rs  batch_inference.rs  checkpoint.rs  config.rs  data.rs  encoder.rs  fast_load.rs  lib.rs  losses.rs  metrics.rs  mri_preprocess.rs  nifti.rs  preprocessing.rs  saliency.rs  training.rs  weights.rs
src/model/: backbone.rs  classifier.rs  mod.rs  patch_embed_3d.rs  segmentation.rs  vit.rs
tests/: model_test.rs  nifti_test.rs  parity.rs
